Fix spacing in detail

--- a/wwwroot/styles/detail.css
+++ b/wwwroot/styles/detail.css
@@ -6,4 +6,16 @@
   & > header {
     margin-bottom: 25px;
   }
+
+  & > main {
+    & p,
+    & h1,
+    & h2,
+    & h3,
+    & h4,
+    & h5,
+    & h6 {
+      margin: revert;
+    }
+  }
 }
